--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 
 <body>
 
+    <nav class="title-bar"> 
+        <ul>
+            <li>Canopy</li>
+            <li>About</li>
+        </ul>
+    </nav>
 
-
+    <p>hello</p>
     
 </body>
 </html>
