--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canopy</title>
-    <link rel="stylesheet" href="../canopy/landing.css">
-    <script src="../canopy/landing.js" defer></script>
+    <link rel="stylesheet" href="../canopy/index.css">
+    <link rel="stylesheet" href="../canopy/reset.css">
+    <script src="../canopy/index.js" defer></script>
 </head>
 <body>
 
