--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
         <div class="filters">
             
         <div class="filter-text filter-active-btn">percentage</div>   
-        <div class="filter-text filter-btn">visualize</div> 
+        <!-- <div class="filter-text filter-btn">visualize</div>  -->
         <div class="filter-text native-filter-btn">native</div>
         <div class="filter-text non-filter-btn">non-native</div>
 
