[MAIN] added flex for filter nav

--- a/main.html
+++ b/main.html
@@ -28,9 +28,10 @@
 
     <!-- FILTER TABS -->
     <nav class="filter-bar">
-        
-        <div class="filter-text info-btn">sort new york's trees by:</div>
+        <div class="flex-btn">
+            <div class="filter-text info-btn">sort new york's trees by:</div>
 
+         </div>
         <div class="all-filters">
             
         <div class="filter-text filter-active-btn">percentage</div>   
