[MAIN] testing js

--- a/main.html
+++ b/main.html
@@ -45,6 +45,8 @@
     <!-- JAVASCRIPT VIZ GOES AFTER THIS -->
 
     <p class="body-text">Honey Locust</p>
+
+    <div id="container"></div>
     
 
 
