--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <!-- SITEWIDE NAVIGATION (CANOPY/ ABOUT) -->
+    <!------------------------------------ SITEWIDE NAV (CANOPY/ ABOUT) ------------------------------------>
     <nav class="title-bar"> 
         <ul class="site-nav">
             <li class="header-italic">Canopy</li>
@@ -26,7 +26,7 @@
     </nav>
 
 
-    <!-- FILTER TABS -->
+    <!------------------------------------ FILTER TABS ------------------------------------>
     <nav class="filter-bar">
         <div class="flex-btn">
             <div class="filter-text info-btn">sort new york's trees by:</div>
@@ -42,10 +42,10 @@
         </div>
     </nav>
 
-    <!-- JAVASCRIPT VIZ GOES AFTER THIS -->
+    <!------------------------------------ JAVASCRIPT VISUALIZATION ------------------------------------>
 
     <p class="body-text">Honey Locust</p>
-
+    <div id="errors"></div>
     <div id="container"></div>
     
 
