[main html] misc

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 
     <!------------------------------------ JAVASCRIPT VISUALIZATION ------------------------------------>
 
-    <p class="body-text">Honey Locust</p>
+    <!-- <p class="body-text">Honey Locust</p> -->
     <div id="errors"></div>
     <div id="container"></div>
     
