[html] added ids to filters

--- a/main.html
+++ b/main.html
@@ -34,10 +34,10 @@
          </div>
         <div class="all-filters">
             
-        <div class="filter-text filter-active-btn">percentage</div>   
+        <div class="filter-text filter-active-btn" id="percentage-filter">percentage</div>   
         <!-- <div class="filter-text filter-btn">visualize</div>  -->
-        <div class="filter-text native-filter-btn">native</div>
-        <div class="filter-text non-filter-btn">non-native</div>
+        <div class="filter-text native-filter-btn" id="native-filter">native</div>
+        <div class="filter-text non-filter-btn" id="non-native-filter">non-native</div>
 
         </div>
     </nav>
