--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Canopy</title>
     <link rel="stylesheet" href="../canopy/index.css">
     <link rel="stylesheet" href="../canopy/reset.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ehl7arq.css">
+    <style>
+        @import url("https://use.typekit.net/ehl7arq.css");
+      </style>
     <script src="../canopy/index.js" defer></script>
 </head>
 <body>
@@ -14,6 +18,8 @@
     <div id="container">
 
     </div>
+
+    <div id="hover-native"></div>
     
 </body>
 </html>
