setup total no. of trees dashboard

--- a/main.html
+++ b/main.html
@@ -46,7 +46,8 @@
     <!------------------------------------ KEY ------------------------------------>
     <div class="body-text key-flex">
         <div>
-        Visualizing __________ New York City trees by
+            
+        <div id="key-text"></div>
         
         <div class="body-text sub-filters-flex">
             <div id="percentage-filter" class="sub-filter">view all </div>
