--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
         <div class="all-filters">
             
         <div class="filter-text filter-btn">     a tree      </div>   
-        <div class="filter-text filter-btn">            the canopy  </div>
+        <div class="filter-text filter-btn" id="forest_btn">            the canopy  </div>
         <div class="filter-text filter-btn">            generate    </div>
 
         </div>
