connected landing -> main page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 </head>
 <body>
 
+    <a href="../canopy/main.html">
     <div id="container">
 
     </div>
+    
 
     <div id="hover-native"></div>
+
+    </a>
     
 </body>
 </html>
