--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     
 
-    <div id="hover-native" style="position: absolute; top: 0; left: 0;"></div>
+    <div id="hover-native" style="position: absolute; top: 0; left: 0;" class="hover-native"></div>
 
     </a>
     
