--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../canopy/index.css">
     <link rel="stylesheet" href="../canopy/reset.css">
     <link rel="stylesheet" href="https://use.typekit.net/ehl7arq.css">
+    <link rel="icon" type="image/x-icon" href="../canopy/assets/Favicon.svg">
     <style>
         @import url("https://use.typekit.net/ehl7arq.css");
       </style>
