--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"  href="main.css">
     <link rel="stylesheet"  href="reset.css">
     <link rel="stylesheet" href="https://use.typekit.net/ehl7arq.css">
+    <link rel="icon" type="image/x-icon" href="../canopy/assets/Favicon.svg">
     <script src="main.js" defer></script>
 
     <style>
