--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canopy</title>
     <link rel="stylesheet" href="../canopy/index.css">
-    <link rel="stylesheet" href="../canopy/reset.css">
+    <!-- <link rel="stylesheet" href="../canopy/reset.css"> -->
     <link rel="stylesheet" href="https://use.typekit.net/ehl7arq.css">
     <link rel="icon" type="image/x-icon" href="../canopy/assets/Favicon.svg">
     <style>
