--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
 
-    <div id="hover-native" style="position: absolute; top: 0; left: 0;" class="hover-native"></div>
+    <div id="hover-native" class="hover-native"></div>
 
     </a>
     
