removed compare subfilter

--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
             <div id="percentage-filter" class="sub-filter">view all </div>
             <div id="native-filter" class="sub-filter">native </div> 
             <div id="non-native-filter" class="sub-filter">non-native </div>
-            <div id="compare-filter" class="sub-filter">compare </div>
+            <!-- <div id="compare-filter" class="sub-filter">compare </div> -->
         </div>
 
 
