--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     <nav class="title-bar"> 
         <ul class="site-nav">
             <li class="header-italic">Canopy</li>
-            <li class="header">About</li>
+            <li class="header" id="about">About</li>
         </ul>
     </nav>
 
