--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
          </div> -->
         <div class="all-filters">
             
-        <div class="filter-text filter-btn">     a tree      </div>   
+        <div class="filter-text filter-btn" id="tree_btn">     a tree      </div>   
         <div class="filter-text filter-btn" id="forest_btn">            the forest  </div>
         <div class="filter-text filter-btn">            generate    </div>
 
